# risc_v_single_cycle

./: dune-project  risc_v.opam
lib/: alu.ml  aludec.ml  controller.ml  cpu.ml  data_memory.ml  datapath.ml  dune  extend.ml  instruction_mem.ml  maindec.ml  memory.ml  regfile.ml  riscv.ml
test/: dune  test_memory.ml  test_regfile.ml
